force-app/main/default/objects/Case/fields/AI_Response_Text__c.field-meta.xml
<CustomField>
    <fullName>AI_Response_Text__c</fullName>
    <label>AI Response Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>