force-app/main/default/objects/Case/fields/Case_Creator__c.field-meta.xml
<CustomField>
    <fullName>Case_Creator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the User who originally requested the case. Used because Platform Event triggers run as Automated Process.</description>
    <label>Case Creator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CreatedCases</relationshipName>
    <type>Lookup</type>
</CustomField>