force-app/main/default/objects/Case/fields/Requires_Manager_Review__c.field-meta.xml
<CustomField>
    <fullName>Requires_Manager_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the case will move to "Pending Review" upon submission instead of closing automatically.</description>
    <label>Requires Manager Review</label>
    <type>Checkbox</type>
</CustomField>