force-app/main/default/objects/Case/listViews/Radiopharm_Order.listView-meta.xml
<ListView>
    <fullName>Radiopharm_Order</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>012dm000000lfsX</value>
    </filters>
    <label>Radiopharm Order</label>
</ListView>