force-app/main/default/objects/Case/listViews/Scheduling.listView-meta.xml
<ListView>
    <fullName>Scheduling</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>012dm000000lfu9</value>
    </filters>
    <label>Scheduling</label>
</ListView>